--- a/index.ipynb
+++ b/index.ipynb
@@ -68,7 +68,9 @@
    "outputs": [],
    "source": [
     "#Your code here; import sqlite, create a connection and then a cursor object.\n",
-    "import sqlite3\n"
+    "import sqlite3\n",
+    "conn = sqlite3.connect('dogs.db')\n",
+    "c "
    ]
   },
   {
