--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "c.execute('select name, breed ')"
    ]
   },
   {
