Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.execute('select name, breed ')"
+    "c.execute('select name, breed from dogs where ')"
    ]
   },
   {
