--- a/index.ipynb
+++ b/index.ipynb
@@ -98,11 +98,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Little Ann', 'coonhound'),\n",
+       " ('Pickles', 'black lab'),\n",
+       " ('Lassie', 'collie'),\n",
+       " ('Snowy', 'fox terrier')]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "c.execute('select name, breed from dogs where Gender == \\'F\\';').fet"
+    "c.execute('select name, breed from dogs where Gender == \\'F\\';').fetchall()"
    ]
   },
   {
