Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -132,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.execute('select name ')"
+    "c.execute('select name from dogs order by')"
    ]
   },
   {
