Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -144,7 +144,7 @@
     }
    ],
    "source": [
-    "c.execute('select name from dogs order by ASC;').fetchall()"
+    "c.execute('select name from dogs order by name ASC;').fetchall()"
    ]
   },
   {
