Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -167,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.execute('select ')"
+    "c.execute('select * from dogs where name == NULL')"
    ]
   },
   {
