--- a/index.ipynb
+++ b/index.ipynb
@@ -163,11 +163,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "c.execute('select * from dogs where name == NULL')"
+    "c.execute('select * from dogs where name == NULL;').fetchall()"
    ]
   },
   {
