Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -163,22 +163,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[(9, None, 4, 'M', 'golden retriever', 'playful', 1)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c.execute('select * from dogs where name == NULL;').fetchall()"
+    "c.execute('select * from dogs where name IS NULL;').fetchall()"
    ]
   },
   {
