--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "c.execute('select name, breed from dogs where')"
    ]
   },
   {
