Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.execute('select name, breed from dogs where')"
+    "c.execute('select name, breed from dogs where temperament == \\'hungry\\' )"
    ]
   },
   {
