--- a/index.ipynb
+++ b/index.ipynb
@@ -190,11 +190,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Scooby', 'great dane')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "c.execute('select name, breed from dogs where temperament == \\'hungry\\' order by age;')"
+    "c.execute('select name, breed from dogs where temperament == \\'hungry\\' order by age;').fetchall()"
    ]
   },
   {
