Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "c.execute('select name, age, temperament from d')"
    ]
   },
   {
