Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.execute('select name, age, temperament from d')"
+    "c.execute('select name, age, temperament from dogs order by age limit 1;')."
    ]
   },
   {
