--- a/index.ipynb
+++ b/index.ipynb
@@ -217,11 +217,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Pickles', 13, 'mischievous')]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "c.execute('select name, age, temperament from dogs order by age limit 1;')."
+    "c.execute('select name, age, temperament from dogs order by age desc limit 1;').fetchall()"
    ]
   },
   {
