--- a/index.ipynb
+++ b/index.ipynb
@@ -248,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "c.execute('select * from dogs order by ')"
    ]
   },
   {
