--- a/index.ipynb
+++ b/index.ipynb
@@ -277,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.execute('')"
+    "c.execute('select name, breed from dogs where age ')"
    ]
   },
   {
