Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -277,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.execute('select name, breed from dogs where age ')"
+    "c.execute('select name, breed from dogs where age BETWEEN 5 AND 10;').fetchall"
    ]
   },
   {
