Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -273,11 +273,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('McGruff', 'bloodhound'),\n",
+       " ('Scooby', 'great dane'),\n",
+       " ('Little Ann', 'coonhound'),\n",
+       " ('Lassie', 'collie'),\n",
+       " ('Snowy', 'fox terrier')]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "c.execute('select name, breed from dogs where age BETWEEN 5 AND 10;').fetchall"
+    "c.execute('select name, breed from dogs where age BETWEEN 5 AND 10;').fetchall()"
    ]
   },
   {
