Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -205,7 +205,7 @@
     }
    ],
    "source": [
-    "c.execute('select name, breed from dogs where temperament == \\'hungry\\' order by age;').fetchall()"
+    "c.execute('select name, breed from dogs where h == \\'hungry\\' order by age;').fetchall()"
    ]
   },
   {
