--- a/index.ipynb
+++ b/index.ipynb
@@ -190,22 +190,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Scooby', 'great dane')]"
+       "[('Snoopy', 'beagle'),\n",
+       " ('Clifford', 'big red'),\n",
+       " (None, 'golden retriever'),\n",
+       " ('Scooby', 'great dane'),\n",
+       " ('Lassie', 'collie'),\n",
+       " ('Pickles', 'black lab')]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c.execute('select name, breed from dogs where h == \\'hungry\\' order by age;').fetchall()"
+    "c.execute('select name, breed from dogs where hungry == 1 order by age;').fetchall()"
    ]
   },
   {
