Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -313,7 +313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.execute('select name, age, hungry from dogs where')"
+    "c.execute('select name, age, hungry from dogs where hungry == 1 and age betwwen 2 and 7;')"
    ]
   },
   {
