--- a/index.ipynb
+++ b/index.ipynb
@@ -309,11 +309,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Snoopy', 3, 1),\n",
+       " ('Scooby', 6, 1),\n",
+       " ('Clifford', 4, 1),\n",
+       " ('Lassie', 7, 1),\n",
+       " (None, 4, 1)]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "c.execute('select name, age, hungry from dogs where hungry == 1 and age betwwen 2 and 7;')"
+    "c.execute('select name, age, hungry from dogs where hungry == 1 and age between 2 and 7;').fetchall()"
    ]
   },
   {
