--- a/index.ipynb
+++ b/index.ipynb
@@ -309,26 +309,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Snoopy', 3, 1),\n",
-       " ('Scooby', 6, 1),\n",
+       "[(None, 4, 1),\n",
        " ('Clifford', 4, 1),\n",
        " ('Lassie', 7, 1),\n",
-       " (None, 4, 1)]"
+       " ('Scooby', 6, 1),\n",
+       " ('Snoopy', 3, 1)]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c.execute('select name, age, hungry from dogs where hungry == 1 and age between 2 and 7;').fetchall()"
+    "c.execute('select name, age, hungry from dogs where hungry == 1 and age between 2 and 7 order by name;').fetchall()"
    ]
   },
   {
